--- a/app/src/main/res/layout/photo_fragment.xml
+++ b/app/src/main/res/layout/photo_fragment.xml
@@ -55,40 +55,16 @@
             android:textColor="#090707"
             android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/one_star"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/star" />
-
-        <ImageView
-            android:id="@+id/two_star"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/star" />
-
-        <ImageView
-            android:id="@+id/three_star"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/star" />
-
-        <ImageView
-            android:id="@+id/four_star"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/star" />
-
-        <ImageView
-            android:id="@+id/five_star"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@drawable/star" />
+        <RatingBar
+            android:id="@+id/ratingBar2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:isIndicator="true"
+            android:max="5"
+            android:numStars="5"
+            android:progressTint="#ED6868"
+            android:rating="3"
+            android:stepSize="0.5" />
 
     </LinearLayout>
 
@@ -112,11 +88,6 @@
             android:textColor="#090707"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/sample_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
     </LinearLayout>
 
     <Button
