--- a/app/src/main/res/menu/menumain.xml
+++ b/app/src/main/res/menu/menumain.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/actionsearch"
         android:icon="@drawable/searchblack"
         android:title="search"
         android:iconTint="#ffffff"
