--- a/app/src/main/res/layout/res_recycle.xml
+++ b/app/src/main/res/layout/res_recycle.xml
@@ -62,7 +62,8 @@
                         android:rating="4"
                         android:stepSize="0.5"
                         android:progressTint="#ED6868"
-                        android:id="@+id/ratingBar"/>
+                        android:id="@+id/ratingBar"
+                        android:secondaryProgressTint="#ED6868"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
