--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/actionsearch"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="search"
         android:iconTint="#ffffff"
