--- a/app/src/main/res/layout/mytab_waiting.xml
+++ b/app/src/main/res/layout/mytab_waiting.xml
@@ -20,8 +20,7 @@
                 android:backgroundTint="#ffffff"
                 app:navigationIcon="@drawable/back"
                 app:navigationIconTint="#ED6868"
-                android:background="#ffffff"
-                app:menu="@menu/main">
+                android:background="#ffffff">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
