--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -8,4 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view"/>
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="101dp"
+        android:layout_height="69dp"
+        android:layout_gravity="center"
+        android:indeterminateTint="#ED6868"
+        android:visibility="gone" />
 </FrameLayout>
