--- a/app/src/main/res/layout/photo_list_activity.xml
+++ b/app/src/main/res/layout/photo_list_activity.xml
@@ -10,6 +10,13 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="101dp"
+            android:layout_height="69dp"
+            android:layout_gravity="center"
+            android:indeterminateTint="#ED6868"
+            android:visibility="gone" />
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
