--- a/app/src/main/res/layout/activity_qr_rest.xml
+++ b/app/src/main/res/layout/activity_qr_rest.xml
@@ -34,7 +34,7 @@
                         app:srcCompat="@drawable/image2" />
 
                     <TextView
-                        android:id="@+id/waiting"
+                        android:id="@+id/waitingNumbertv"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="#FFFFFF"
