--- a/app/src/main/res/layout/activity_restaurant_search.xml
+++ b/app/src/main/res/layout/activity_restaurant_search.xml
@@ -37,19 +37,27 @@
             android:overScrollMode="never"
             android:scrollbars="none"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
+
                 <EditText
-                    android:layout_width="match_parent"
+                    android:id="@+id/search_text"
+                    android:layout_width="288dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:backgroundTint="#ED6868"
-                    android:hint="검색어를 입력해주세요"
-                    android:drawableLeft="@drawable/ic_baseline_search_24"/>
+                    android:drawableLeft="@drawable/ic_baseline_search_24"
+                    android:hint="검색어를 입력해주세요" />
+
+                <Button
+                    android:id="@+id/search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Button" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
