--- a/app/src/main/res/layout/restab_info_activity.xml
+++ b/app/src/main/res/layout/restab_info_activity.xml
@@ -31,7 +31,7 @@
                         android:scaleType="centerCrop"
                         app:srcCompat="@drawable/image2" />
                     <TextView
-                        android:id="@+id/waiting"
+                        android:id="@+id/waitingNumbertv"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="#FFFFFF"
