--- a/app/src/main/res/layout/menu_recycler2.xml
+++ b/app/src/main/res/layout/menu_recycler2.xml
@@ -19,14 +19,14 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/image1" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="140dp"
                 android:orientation="vertical"
                 android:padding="16dp">
 
@@ -39,6 +39,15 @@
                     android:includeFontPadding="false"
                     android:text="Name"
                     android:textSize="20dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/notosansregular"
+                    android:textColor="#656565"
+                    android:includeFontPadding="false"
+                    android:textSize="10dp"
+                    android:text="뜨끈한 미역국 아주 쥑이네예! 강추드립니다잉" />
                 <TextView
                     android:id="@+id/price"
                     android:layout_width="wrap_content"
