10/30 레스토랑 사진크기 resize 완료

--- a/app/src/main/res/layout/mytab_information_fix.xml
+++ b/app/src/main/res/layout/mytab_information_fix.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".mytab.information_fix">
+    tools:context=".mytab.Information_Fix">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
