--- a/app/src/main/res/layout/activity_restaurant_search_recycler.xml
+++ b/app/src/main/res/layout/activity_restaurant_search_recycler.xml
@@ -6,5 +6,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recycler_view"/>
+        android:id="@+id/review_recycler_view"/>
 </LinearLayout>
