--- a/app/src/main/res/layout/res_list_activity.xml
+++ b/app/src/main/res/layout/res_list_activity.xml
@@ -10,6 +10,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ProgressBar
             android:id="@+id/loading"
             android:layout_width="101dp"
@@ -204,7 +205,7 @@
                         android:layout_height="match_parent">
 
                         <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recycler_view"
+                            android:id="@+id/review_recycler_view"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>
