--- a/app/src/main/res/layout/waiting_activity.xml
+++ b/app/src/main/res/layout/waiting_activity.xml
@@ -62,7 +62,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/waiting_res_tableNumber"
+                    android:id="@+id/waiting_res_resInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="-10dp"
