--- a/app/src/main/res/layout/activity_restaurant_search.xml
+++ b/app/src/main/res/layout/activity_restaurant_search.xml
@@ -40,24 +40,31 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/search_text"
-                    android:layout_width="288dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:backgroundTint="#ED6868"
-                    android:drawableLeft="@drawable/ic_baseline_search_24"
-                    android:hint="검색어를 입력해주세요" />
-
-                <Button
-                    android:id="@+id/search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:orientation="horizontal">
+                    <EditText
+                        android:id="@+id/search_text"
+                        android:layout_width="288dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="10dp"
+                        android:backgroundTint="#ED6868"
+                        android:drawableLeft="@drawable/ic_baseline_search_24"
+                        android:hint="검색어를 입력해주세요" />
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Button" />
+                </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
